# amalgamate-pages

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  action.yml  branches.css  branches.html  comment.md  godoctopus.py  pyproject.toml  redirect.html  stats.py
.github/workflows/: pre-commit.yml  update-major-version-tag.yml
