[project]
name = "amalgamate-pages"
version = "1.0.0"
description = "Amalgamate builds from many branches into one GitHub Pages site"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.5",
    "requests>=2.28.1",
    "requests-cache>=1.2.1",
]

[tool.uv]
required-version = ">=0.5.0"

[tool.mypy]
python_version = "3.12"
files = [
    "godoctopus.py",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "types-requests>=2.32.0.20250328",
]
